--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,13 @@
     
 }
 .selected{
-    background-color: red;
+    background-color:white;
+    color: red;
     padding: 10px;
 }
 .quiz li:hover{
-    color: red;
-    justify-content: space-between;
+    color: yellow;
+    justify-content: space-around;
 
 }
 body{
@@ -28,3 +29,4 @@ body{
     color: blue;
     font-weight: bold;
 }
+
